crates/strider-analyze/tests/snapshots/v2__x64__calling_convention__forward_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401260:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "8" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "8" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x401378:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "16" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "18" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
