crates/strider-analyze/tests/snapshots/v2__x64__calling_convention__forward_8.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x401270:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "12" -> "1" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "13" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1ffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nR11", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v24" [color="#888888", style=dashed];
  "v24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "v26" [label="Post Call\nR10", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v26" [color="#888888", style=dashed];
  "v26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="init\nRBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[7] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[5] ← R9D", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[4] ← R8D", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← RCX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← ESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← EDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "29" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x4013db:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "48" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "50" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "52" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x404030:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
